--- a/environment.yml
+++ b/environment.yml
@@ -17,7 +17,7 @@ dependencies:
 - efficientnet-pytorch
 - pandas
 - seaborn
-- albumentations
+- albumentations=0.5.2
 - scipy
 - numpy=1.23.4
 - imgaug
